ah crap it was using the old branch link

--- a/thanks.html
+++ b/thanks.html
@@ -139,7 +139,7 @@
 			var langcode = document.getElementsByTagName('html')[0].getAttribute('lang');	
 			document.getElementById('map-embed-350org').setAttribute('data-src-lang', langcode);
 		</script>				
-			<script src="https://feature-refactor--megamap.netlify.com/main.js"></script>
+			<script src="https://350map.org/main.js"></script>
 		{% endif %}
 
 </section>
