adding in full name

--- a/user_form_wrapper.html
+++ b/user_form_wrapper.html
@@ -36,11 +36,11 @@
     <div id="partner_radio" class="margin-bottom-normal input-radio-group text-lineheight-small">
       <div class="input-radio">
         <input type="radio" name="partner-{{ page.custom_fields.form_include_partner }}" id="partner-{{ page.custom_fields.form_include_partner }}_optin" value="yes">
-        <label for="partner-{{ page.custom_fields.form_include_partner }}_optin">Yes I want to receive email updates from {{ page.custom_fields.form_include_partner }}.</label>
+        <label for="partner-{{ page.custom_fields.form_include_partner }}_optin">Yes I want to receive email updates from {{ page.custom_fields.form_include_partner_full_name }}.</label>
       </div>
       <div class="input-radio">
         <input type="radio" name="partner-{{ page.custom_fields.form_include_partner }}" id="partner-{{ page.custom_fields.form_include_partner }}_optout" value="no">
-        <label for="partner-{{ page.custom_fields.form_include_partner }}_optout">No, I do not want emails from {{ page.custom_fields.form_include_partner }}.</label>
+        <label for="partner-{{ page.custom_fields.form_include_partner }}_optout">No, I do not want emails from {{ page.custom_fields.form_include_partner_full_name }}.</label>
       </div>
     </div>
 </div>
