move code into privacy, hide for non-gdpr

--- a/privacy.html
+++ b/privacy.html
@@ -5,18 +5,20 @@
 
   <script>
 
-jQuery(document).ready(function($){
-	var countrySelect = jQuery("#country");
- 	jQuery(actionkit.form).on('actionkit.privacyRequirementChanged', function(obj, privacyStatus){
-//    console.log('privacy requirement is now: ' + privacyStatus);
-		if ( privacyStatus ){
-			jQuery(".privacy-non_eu").hide();
-		} else {
-			jQuery(".privacy-non_eu").show();
-		}
-	});
+		jQuery(document).ready(function($){
+			var countrySelect = jQuery("#country");
+		 	jQuery(actionkit.form).on('actionkit.privacyRequirementChanged', function(obj, privacyStatus){
+		//    console.log('privacy requirement is now: ' + privacyStatus);
+				if ( privacyStatus ){
+					jQuery(".privacy-non_eu").hide();
+					jQuery(".partner-signup").show();			
+				} else {
+					jQuery(".privacy-non_eu").show();
+					jQuery(".partner-signup").show();
+				}
+			});
+		});
 
-});
   </script>
 	<style>
 	#action-toc + .ak-privacy{
@@ -85,6 +87,20 @@ jQuery(document).ready(function($){
     </script>
 
   {% endif %}
+
+	{% if page.custom_fields.form_include_partner %}
+	{% if page.custom_fields.form_include_partner_intro_text %}{{ page.custom_fields.form_include_partner_intro_text }} {% endif %}
+	<div id="partner-share-{{ page.custom_fields.form_include_partner|slugify }}" class="partner-signup margin-bottom-normal input-radio-group text-lineheight-small">
+	      <div class="input-radio">
+	        <input type="radio" name="partner-{{ page.custom_fields.form_include_partner|slugify }}" id="partner-{{ page.custom_fields.form_include_partner|slugify }}_optin" value="yes">
+	        <label for="partner-{{ page.custom_fields.form_include_partner|slugify }}_optin">Yes I want to receive email updates from {{ page.custom_fields.form_include_partner }}.</label>
+	      </div>
+	      <div class="input-radio">
+	        <input type="radio" name="partner-{{ page.custom_fields.form_include_partner|slugify }}" id="partner-{{ page.custom_fields.form_include_partner|slugify }}_optout" value="no">
+	        <label for="partner-{{ page.custom_fields.form_include_partner|slugify }}_optout">No, I do not want emails from {{ page.custom_fields.form_include_partner }}.</label>
+	      </div>
+	</div>
+	{% endif %}
 
 </div>
 
