--- a/privacy.html
+++ b/privacy.html
@@ -89,8 +89,8 @@
   {% endif %}
 
 	{% if page.custom_fields.form_include_partner %}
-	{% if page.custom_fields.form_include_partner_intro_text %}{{ page.custom_fields.form_include_partner_intro_text }} {% endif %}
-	<div id="partner-share-{{ page.custom_fields.form_include_partner|slugify }}" class="partner-signup margin-bottom-normal input-radio-group text-small">
+	{% if page.custom_fields.form_include_partner_intro_text %}<p id="ak-fieldbox-privacy_notice" class="text-small">{{ page.custom_fields.form_include_partner_intro_text }}</p>{% endif %}
+	<div id="partner-share-{{ page.custom_fields.form_include_partner|slugify }}" class="partner-signup margin-bottom-normal input-radio-group">
 	      <div class="input-radio">
 	        <input type="radio" name="partner-{{ page.custom_fields.form_include_partner|slugify }}" id="partner-{{ page.custom_fields.form_include_partner|slugify }}_optin" value="yes">
 	        <label for="partner-{{ page.custom_fields.form_include_partner|slugify }}_optin">Yes I want to receive email updates from {{ page.custom_fields.form_include_partner }}.</label>
