--- a/signup.html
+++ b/signup.html
@@ -78,6 +78,7 @@
 		</form>
 
 <script type="text/javascript">
+jQuery( document ).ready(function() {	
 	function urlParam(name){
 		var results = new RegExp('[\\?&]' + name + '=([^&#]*)').exec(window.location.href);
 		if (!results) { return 0; }
@@ -103,6 +104,7 @@
 	if (oneclick){
 		oneClickOptIn();
 	}
+});	
 </script>
 
 
