--- a/wrapper.html
+++ b/wrapper.html
@@ -363,4 +363,4 @@ jQuery(document).ready(function(){
 
 <div id="body-mobile-background"></div>
 </body>
-</html><!-- one more test for cache awesomeness -->
+</html>
