updating css and js files to point to dev bucket

--- a/wrapper.html
+++ b/wrapper.html
@@ -74,7 +74,7 @@
 
 {% block meta_additions %}{% endblock %}
 
-	<link rel='stylesheet' id='baseline-css' href='https://dbqvwi2zcv14h.cloudfront.net/ak/ak-v3.css?v=2018091408552' type='text/css' media='screen' />
+	<link rel='stylesheet' id='baseline-css' href='https://dbqvwi2zcv14h.cloudfront.net/ak-dev/ak-v3.css' type='text/css' media='screen' />
 {% if templateset.custom_fields.site_addl_css_url %}
 	<link rel='stylesheet' id='addl-css' href='{{ templateset.custom_fields.site_addl_css_url }}' type='text/css' media='screen' />
 {% endif %}
@@ -250,7 +250,7 @@ be translated.
 	</div>
 </footer>
 
-<script src="https://dbqvwi2zcv14h.cloudfront.net/ak/ak-v3.js"></script>
+<script src="https://dbqvwi2zcv14h.cloudfront.net/ak-dev/ak-v3.js"></script>
 {% if page.custom_fields.form_include_college %}
 {% comment %} Select menu plugin for huge select menus: https://harvesthq.github.com/chosen/ {% endcomment %}
 <link rel="stylesheet" type="text/css" href="//dbqvwi2zcv14h.cloudfront.net/images/chosen.css" />
