--- a/donate.html
+++ b/donate.html
@@ -362,7 +362,7 @@
 						{% include "./state_select.html" %}
 					</div>
 					{% if page.allow_international %}
-					<div class="input-text ak-input-type-user ak-intl-billing-fields">
+					<div class="ak-intl-billing-fields input-text ak-input-type-user">
 						<label for="id_region">{% filter ak_text:"field_region" %}Region{% endfilter %}</label>
 						<input id="id_region" type="text" name="region" size="20">
 					</div>
@@ -373,7 +373,7 @@
 						<input id="id_zip" type="text" name="zip" maxlength="5" size="5">
 					</div>
 					{% if page.allow_international %}
-					<div class="input-text ak-input-type-user ak-intl-billing-fields">
+					<div class="ak-intl-billing-fields input-text ak-input-type-user">
 						<label for="id_postal">{% filter ak_text:"field_postal" %}Postal Code{% endfilter %}</label>
 						<input id="id_postal" type="text" name="postal" size="10">
 					</div>
