--- a/donate.html
+++ b/donate.html
@@ -71,11 +71,11 @@
             <input type="radio" id="ak-donate-step-1" class="hidden" name="ak-donate-step" value="1" checked="checked">
         </label>
         <label class="ak-donate-step ak-donate-step-2" for="ak-donate-step-2">
-            <span class="ak-step-number strong inline-dot bg-dkgray-trans">2</span>&nbsp;<span>{% filter ak_text:"donate_step_2_info" %}Info{% endfilter %}</span>
+            <span class="ak-step-number strong inline-dot bg-dkgray-trans">2</span>&nbsp;<span>{% filter ak_text:"donate_step_2_payment" %}Payment{% endfilter %}</span>
             <input type="radio" id="ak-donate-step-2" class="hidden" name="ak-donate-step" value="2">
         </label>
         <label class="ak-donate-step ak-donate-step-3" for="ak-donate-step-3">
-            <span class="ak-step-number strong inline-dot bg-dkgray-trans">3</span>&nbsp;<span>{% filter ak_text:"donate_step_3_payment" %}Payment{% endfilter %}</span>
+            <span class="ak-step-number strong inline-dot bg-dkgray-trans">3</span>&nbsp;<span>{% filter ak_text:"donate_step_3_info" %}Info{% endfilter %}</span>
             <input type="radio" id="ak-donate-step-3" class="hidden" name="ak-donate-step" value="3">
         </label>
     </div>
@@ -320,8 +320,8 @@
       </fieldset>
 {% endif %}
 
-
-      <div id="ak-donation-contact" class="ak-donate-area-step-2 ak-err-below form-style-labelabove">
+<!-- Info Section -->
+      <div id="ak-donation-contact" class="ak-donate-area-step-3 ak-err-below form-style-labelabove">
         <ul id="ak-errors"></ul>
         <div style="display: none"><div id="known_user">
             Not <span id="known_user_name"></span>?  <a href="?" onclick="return actionkit.forms.logOut()">Click here.</a>
@@ -366,7 +366,7 @@
 						<label for="id_region">{% filter ak_text:"field_region" %}Region{% endfilter %}</label>
 						<input id="id_region" type="text" name="region" size="20">
 					</div>
-					{% endif %}						
+					{% endif %}
 					<div class="ak-us-billing-fields input-text ak-input-type-user input-field-group">
 						<input type="hidden" name="required" value="zip">
 						<label for="id_zip">{% filter ak_text:"field_zip" %}Zip{% endfilter %}</label>
@@ -454,7 +454,8 @@
 {% endif %}
 				</div> <!-- donation contact -->
 
-        <div class="ak-donate-area-step-3 form-style-labelabove ak-errs-below">
+        <!-- Payment section -->
+        <div class="ak-donate-area-step-2 form-style-labelabove ak-errs-below">
 					<h5 class="margin-bottom-normal">{% filter ak_text:"donate_payment_information" %}Payment Information{% endfilter %}</h5>
 					<div class="input-text ak-input-type-user input-field-group">
 						<label for="id_name">{% filter ak_text:"field_name" %}Name{% endfilter %}</label>
@@ -528,16 +529,16 @@
 				  For pages that use CSE, the submit button will be enabled by javascript above.
 				  {% endcomment %}
 
-	        <button disabled="true" type="submit" class="ak-submit-button button ak-donate-area-step-3 margin-bottom-normal">{% if page.custom_fields.form_submit_button_text %}{{ page.custom_fields.form_submit_button_text }}{% else %}{% filter ak_text:"donate_submit_button" %}Donate{% endfilter %}{% endif %} <span class="ak-currency-sym">{{ page.currency_sym }}</span><span class="ak-donation-total-amount"></span></button>
+	        <button disabled="true" type="submit" class="ak-submit-button button ak-donate-area-step-2 margin-bottom-normal">{% if page.custom_fields.form_submit_button_text %}{{ page.custom_fields.form_submit_button_text }}{% else %}{% filter ak_text:"donate_submit_button" %}Donate{% endfilter %}{% endif %} <span class="ak-currency-sym">{{ page.currency_sym }}</span><span class="ak-donation-total-amount"></span></button>
 	        <noscript>
 	          <p><b>JavaScript is required</b> so this page can securely submit your donation.</p>
 	      	</noscript>
 				{% else %}
-        	<button type="submit" class="ak-submit-button button ak-donate-area-step-3 margin-bottom-normal">Donate <span class="ak-currency-sym">{{ page.currency_sym }}</span><span class="ak-donation-total-amount"></span></button>
+        	<button type="submit" class="ak-submit-button button ak-donate-area-step-2 margin-bottom-normal">Donate <span class="ak-currency-sym">{{ page.currency_sym }}</span><span class="ak-donation-total-amount"></span></button>
 				{% endif %}
 
 				{% if show_paypal %}
-	        <div class="ak-payment-options text-center ak-donate-area-step-3">
+	        <div class="ak-payment-options text-center ak-donate-area-step-2">
 	        	<input type="hidden" name="paypal" value="0" id="ak-pay-by-paypal">
 						<p class="margin-bottom-small text-small"><em>{% filter ak_text:"donate_or_check_out_with" %}or check out with{% endfilter %} </em> <button type="submit" id="ak-paypal-button" class="button bg-ltgray button-small"><img src="/media/modern/paypal-logo-1.svg" style="position:relative;top:3px;"></button></p>
 	        </div>
