fix: hide continue button in step 2, attempt #2

--- a/donate.html
+++ b/donate.html
@@ -854,7 +854,7 @@
 					$('.ak-donate-step-1').addClass('active-step');
 
         } else if ( current_step == "2" ) {
-          $('.ak-donate-area-step-1, .ak-donate-area-step-3').hide();
+          $('.ak-donate-area-step-1, .ak-donate-area-step-3, #ak-continue-button').hide();
           /* this automatic focus on the input combines with the onblur validation to be over-aggressive
 					$('.ak-donate-area-step-2, #ak-continue-button').fadeIn( speed,
               focus_field_if_blank( $('#id_name') )
