clearfix above donate button

--- a/donate.html
+++ b/donate.html
@@ -501,6 +501,7 @@
 								<div class="clear"></div>
 							</div>
 						</div>
+						<div class="clear"></div>
 					</div>
 					{% if templateset.custom_fields.pre_submit_text %}
 					<div class="pre-submit-text">
